--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Fireships -- Fiction'
 - !lcsh 'Sea stories'
 - !lcc 'PR'
+- GITenberg
 title: 'Ronald Morton; or, the Fire Ships: A Story of the Last Naval War'
 url: http://www.gutenberg.org/ebooks/21389
